--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rails-mvp-starter",
   "private": true,
   "dependencies": {
+    "@rails/ujs": "^7.0.0-alpha2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.2",
     "esbuild": "^0.13.4",
