--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "rails-mvp-starter",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^7.0.0-alpha2",
     "@popperjs/core": "^2.10.2",
+    "@rails/ujs": "^7.0.0-alpha2",
+    "autoprefixer": "^10.3.7",
     "bootstrap": "^5.1.2",
     "esbuild": "^0.13.4",
-    "sass": "^1.42.1"
+    "postcss": "^8.3.9",
+    "sass": "^1.42.1",
+    "tailwindcss": "^2.2.16"
   },
   "version": "0.1.0",
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/bootstrap.css --no-source-map --load-path=node_modules",
+    "build:tailwind": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/tailwind.css"
   }
 }
