--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "@rails/ujs": "^7.0.0-alpha2",
+    "@rails/webpacker": "5.4.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.7",
     "bootstrap": "^5.1.2",
@@ -11,12 +12,17 @@
     "esbuild": "^0.13.4",
     "postcss": "^8.3.9",
     "sass": "^1.42.1",
-    "tailwindcss": "^2.2.16"
+    "tailwindcss": "^2.2.16",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/bootstrap.css --no-source-map --load-path=node_modules",
     "build:tailwind": "tailwindcss -i app/assets/stylesheets/application.tailwind.scss -o ./app/assets/builds/tailwind.css"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
   }
 }
