--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/bootstrap.css --no-source-map --load-path=app/assets/stylesheets",
+    "build:css": "sass ./app/assets/stylesheets/templates.scss ./app/assets/builds/templates.css --no-source-map --load-path=app/assets/stylesheets",
     "build:tailwind": "tailwindcss -i app/assets/stylesheets/application.tailwind.scss -o ./app/assets/builds/tailwind.css"
   }
 }
