--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss": "^8.3.9",
     "sass": "^1.42.1",
     "tailwindcss": "^2.2.16",
+    "@rails/webpacker": "5.4.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
