--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^2.2.16",
     "vue": "^3.2.20",
     "vue-loader": "^16.8.1",
+    "vue-router": "4",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^4.3.1",
