--- a/package.json
+++ b/package.json
@@ -4,27 +4,23 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "@rails/ujs": "^7.0.0-alpha2",
-    "@rails/webpacker": "5.4.3",
-    "@tailwindcss/typography": "^0.4.1",
     "@vue/compiler-sfc": "^3.2.20",
     "add": "^2.0.6",
     "autoprefixer": "^10.3.7",
     "daisyui": "^1.14.2",
-    "esbuild": "^0.13.4",
     "postcss": "^8.3.9",
     "sass": "^1.42.1",
     "superagent": "^6.1.0",
-    "tailwindcss": "^2.2.16",
     "vue": "^3.2.20",
     "vue-loader": "^16.8.1",
     "vue-router": "4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^4.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
     "yarn": "^1.22.17"
   },
   "version": "0.1.0",
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/templates.scss ./app/assets/builds/templates.css --no-source-map --load-path=app/assets/stylesheets"
+    "build:css": "sass ./app/assets/stylesheets/templates.scss ./app/assets/builds/templates.css --no-source-map --load-path=app/assets/stylesheets",
+    "build": "webpack --config webpack.config.js"
   }
 }
